--- a/src/style.css
+++ b/src/style.css
@@ -29,7 +29,9 @@ ul {
 }
 
 body {
-  font-family: sans-serif;
+  font-family: var(--font-family);
+  font-size: var(--font-size);
+  color: var(--font-color);
   background-color: #f5f5f5;
 }
 
@@ -37,25 +39,24 @@ body {
   display: grid;
   min-height: 100vh;
   grid-template-rows: auto 1fr auto;
-  grid-template-columns: 1fr;
+  grid-template-columns: minmax(150px,1fr) 5fr;
+  grid-template-areas:
+    "header header"
+    "sidebar project-content"
+    "footer footer";
 }
 
 /* Header */
 header {
+  grid-area: header;
   height: var(--header-height);
   background-color: var(--primary-color);
   padding: var(--header-padding);
 }
 
-/* Main */
-main {
-  display: grid;
-  grid-template-columns: 300px 2fr;
-  height: calc(100vh - calc(var(--header-height) + var(--footer-height)));
-}
-
 /* Sidebar */
-nav {
+#sidebar {
+  grid-area: sidebar;
   grid-column: 1/2;
   display: grid;
   grid-template-rows: auto 1fr;
@@ -63,25 +64,31 @@ nav {
   overflow-y: auto;
 }
 
-section {
+#sidebar > section {
   width: 100%;
   padding: 1.5rem 2rem;
 }
 
-nav ul li {
+.sidebar-list li {
   padding: 10px 0;
   text-align: start;
 }
 
 /* Content */
 #content {
+  height: calc(100vh - calc(var(--header-height) + var(--footer-height)));
+  grid-area: project-content;
   grid-column: 2/3;
   padding: 2rem 10rem;
-  overflow-y: auto;
 }
 
 #project-name {
   margin-bottom: 1rem;
+}
+
+#todo-wrapper {
+  height: calc(100% - 2 * 2rem);
+  overflow-y: auto;
 }
 
 #todo-list {
@@ -104,6 +111,7 @@ nav ul li {
 /* Footer */
 
 footer {
+  grid-area: footer;
   display: flex;
   align-items: center;
   justify-content: center;
