--- a/src/style.css
+++ b/src/style.css
@@ -39,7 +39,7 @@ body {
   display: grid;
   min-height: 100vh;
   grid-template-rows: auto 1fr auto;
-  grid-template-columns: minmax(150px,1fr) 5fr;
+  grid-template-columns: minmax(150px, 1fr) 5fr;
   grid-template-areas:
     "header header"
     "sidebar project-content"
@@ -98,14 +98,57 @@ header {
   gap: 0.5rem;
 }
 
+/* Todo item */
 .todo-item {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 1rem;
+  padding: 0.5rem 1rem;
   border-radius: var(--border-radius);
   border: var(--border);
   box-shadow: var(--box-shadow);
+}
+
+.todo-item > .is-complete {
+  margin-right: 1rem;
+  width: 20px;
+  height: 20px;
+}
+
+.todo-item > .title {
+  font-size: 1.2rem;
+  font-weight: bold;
+  flex: 1;
+}
+
+.todo-item > .todo-details {
+  display: flex;
+  align-items: flex-end;
+  gap: 0.5rem;
+  margin: 0 1rem;
+}
+
+.todo-item > .todo-details > * {
+  border: var(--border);
+  border-radius: var(--border-radius);
+  padding: 0.2rem 0.5rem;
+  background-color: var(--tertiary-color);
+  font-size: 0.8rem;
+}
+
+.todo-item > .actions {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.todo-item > .actions > button {
+  padding: 0.4rem;
+  border-radius: var(--border-radius);
+  border: var(--border);
+  box-shadow: var(--box-shadow);
+  background-color: var(--secondary-color);
+  color: #ffffff;
 }
 
 /* Footer */
