--- a/src/style.css
+++ b/src/style.css
@@ -57,7 +57,6 @@ header {
 /* Sidebar */
 #sidebar {
   grid-area: sidebar;
-  grid-column: 1/2;
   display: grid;
   grid-template-rows: auto 1fr;
   background-color: #eaeaea;
@@ -78,11 +77,19 @@ header {
 #content {
   height: calc(100vh - calc(var(--header-height) + var(--footer-height)));
   grid-area: project-content;
-  grid-column: 2/3;
-  padding: 2rem 10rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 2rem 0rem;
+}
+
+#content > * {
+  width: 85%;
 }
 
 #project-name {
+  font-size: 2rem;
+  font-weight: bold;
   margin-bottom: 1rem;
 }
 
@@ -118,7 +125,7 @@ header {
 .todo-item > .title {
   font-size: 1.2rem;
   font-weight: bold;
-  flex: 1;
+  margin-right: auto;
 }
 
 .todo-item > .todo-details {
@@ -169,4 +176,43 @@ footer {
 
 footer a {
   color: #ffffff;
+}
+
+/* Media query for smaller screens */
+@media (max-width: 768px) {
+  #container {
+    grid-template-columns: 1fr;
+    grid-template-areas:
+      "header"
+      "project-content"
+      "footer";
+  }
+
+  #sidebar {
+    display: none;
+  }
+
+  #content {
+    padding: 1em 0.5em;
+  }
+
+  #content > #project-name {
+    font-size: 1.3em;
+  }
+
+  #content > * {
+    width: 100%; /* Change the width to 100% for smaller screens */
+  }
+
+  .todo-item > .title {
+    font-size: 1em;
+  }
+
+  .todo-item > .todo-details > * {
+    font-size: 0.6em;
+  }
+
+  .todo-item > .actions > button {
+    font-size: 0.6em;
+  }
 }
