--- a/src/style.css
+++ b/src/style.css
@@ -78,6 +78,10 @@ header {
   background-color: #e5e5e5;
 }
 
+.active {
+  background-color: #c5c5c5;
+}
+
 /* Content */
 #content {
   height: calc(100vh - calc(var(--header-height) + var(--footer-height)));
