--- a/src/style.css
+++ b/src/style.css
@@ -35,6 +35,14 @@ body {
   background-color: #f5f5f5;
 }
 
+.hidden {
+  display: none;
+}
+
+button {
+  cursor: pointer;
+}
+
 #container {
   display: grid;
   min-height: 100vh;
@@ -166,6 +174,43 @@ header {
   box-shadow: var(--box-shadow);
   background-color: var(--secondary-color);
   color: #ffffff;
+}
+
+#overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+#todo-popup {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 101;
+  width: 400px;
+  padding: 1rem;
+  border-radius: var(--border-radius);
+  border: var(--border);
+  box-shadow: var(--box-shadow);
+  background-color: #ffffff;
+}
+
+#todo-popup>#todo-popup-header {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  margin-bottom: 1rem;
+}
+
+#todo-popup>#todo-popup-header>#close-btn {
+  border: none;
+  background-color: transparent;
+  color: #5b5b5b;
 }
 
 /* Footer */
