--- a/src/style.css
+++ b/src/style.css
@@ -43,6 +43,21 @@ button {
   cursor: pointer;
 }
 
+.high {
+  background-color: #ffc7c2;
+  color: #273f30;
+}
+
+.medium {
+  background-color: #77ebff;
+  color: #273f30;
+}
+
+.low {
+  background-color: #aafcaf;
+  color: #273f30;
+}
+
 #container {
   display: grid;
   min-height: 100vh;
@@ -157,8 +172,11 @@ header {
   border: var(--border);
   border-radius: var(--border-radius);
   padding: 0.2rem 0.5rem;
-  background-color: var(--tertiary-color);
   font-size: 0.8rem;
+}
+
+.days-till-due {
+  background-color: var(--tertiary-color);
 }
 
 .todo-item > .actions {
@@ -211,6 +229,45 @@ header {
   border: none;
   background-color: transparent;
   color: #5b5b5b;
+}
+
+#todo-description {
+  margin-bottom: 10px;
+}
+
+#todo-duedate {
+  font-weight: bold;
+  font-style: italic;
+  margin-bottom: 5px;
+}
+
+#tag-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0.5rem;
+  margin-bottom: 10px;
+}
+
+#tag-container > * {
+  border: var(--border);
+  border-radius: var(--border-radius);
+  padding: 0.2rem 0.5rem;
+}
+
+#actions-container {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  gap: 0.5rem;
+}
+
+#actions-container > button {
+  padding: 0.4rem;
+  border-radius: var(--border-radius);
+  border: var(--border);
+  box-shadow: var(--box-shadow);
+  background-color: var(--secondary-color);
+  color: #ffffff;
 }
 
 /* Footer */
