Fix forms throwing errors with empty fields

--- a/src/style.css
+++ b/src/style.css
@@ -242,6 +242,12 @@ button {
   flex-direction: column;
 }
 
+form {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
 #todo-description {
   margin-bottom: 10px;
 }
