--- a/src/style.css
+++ b/src/style.css
@@ -271,14 +271,14 @@ form {
   padding: 0.2rem 0.5rem;
 }
 
-#actions-container {
+.actions-container {
   display: flex;
   align-items: center;
   justify-content: flex-end;
   gap: 0.5rem;
 }
 
-#actions-container > button {
+.actions-container > button {
   padding: 0.4rem;
   border-radius: var(--border-radius);
   border: var(--border);
