--- a/src/style.css
+++ b/src/style.css
@@ -84,6 +84,7 @@ button {
   grid-template-rows: auto 1fr;
   background-color: #eaeaea;
   overflow-y: auto;
+  overflow-x: hidden;
 }
 
 #sidebar > section {
@@ -104,10 +105,23 @@ button {
   cursor: pointer;
 }
 
+.project-list-item, #add-project {
+  transform: scale(1);
+  transition: transform 0.1s ease-in-out;
+}
+
+.project-list-item:hover, #add-project:hover {
+  transform: scale(1.05);
+}
+
 .project-list-item {
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+
+.project-list-item:hover > .delete-project {
+  display: block;
 }
 
 .project-list-item > .delete-project {
