--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
 :root {
-  --primary-color: #47c8ff;
+  --primary-color: #06a8ee;
   --secondary-color: #424242;
   --tertiary-color: #e5e5e5;
   --font-color: #333;
@@ -8,7 +8,7 @@
   --border-radius: 5px;
   --border: 1px solid #e5e5e5;
   --box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
-  --header-font-size: 32px;
+  --header-font-size: 40px;
   --header-padding: 20px;
   --header-height: calc(var(--header-font-size) + 2 * var(--header-padding));
   --foooter-font-size: 1rem;
@@ -74,7 +74,12 @@ button {
   grid-area: header;
   height: var(--header-height);
   background-color: var(--primary-color);
+  color: #e5e5e5;
   padding: var(--header-padding);
+}
+
+#page-header h1 {
+  font-size: var(--header-font-size);
 }
 
 /* Sidebar */
@@ -150,6 +155,7 @@ button {
   background-color: transparent;
   font-size: var(--font-size);
   color: var(--font-color);
+  font-weight: bold;
 }
 
 .active {
@@ -180,6 +186,30 @@ button {
 #project-name {
   font-size: 2rem;
   font-weight: bold;
+}
+
+.add-todo {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--primary-color);
+  color: #fff;
+  gap: 8px;
+  border: none;
+  border-radius: 5px;
+  padding: 10px 12px;
+  cursor: pointer;
+  transition: background-color 0.3s, transform 0.2s;
+}
+
+.add-todo:hover {
+  background-color: #1188ff;
+  transform: scale(1.05);
+}
+
+.add-todo span {
+  font-weight: bold;
+  font-size: 16px;
 }
 
 #content-wrapper {
